# 3dviewer-web-project

./: .eslintrc.js  .prettierrc.js  README.md  babel.config.js  launcher.config  mytest.py  package-lock.json  package.json  proxy-mapping.txt  pyproject.toml  vue.config.js
launcher/: 0e209563-0ac7-11ee-be3e-f01faf53a282.txt  325a1606-0a97-11ee-953c-74e543f596f0.txt  a1830822-0b20-11ee-8449-74e543f596f0.txt  ba882aa1-0b1e-11ee-b84f-74e543f596f0.txt
public/: index.html
server/vtkpython/: vtk_protocol.py  vtk_server.py
server/vtkpython/model/: presets.py
server/vtkpython/model/markups/: markupLineInteractorStyle.py
server/vtkpython/model/measure/: viewer3dMeasureLength.py
server/vtkpython/model/pipelines/: markupLine.py
server/vtkpython/models/: colormap.py  presets.py
server/vtkpython/models/cropping/: freehand.py  operationMode.py
server/vtkpython/protocol/: preset_protocol.py  vtk_protocol.py
server/vtkpython/unittesting/: test.py
server/vtkpython/utils/: measure.py  utils.py
src/: main.js
src/components/core/App/: index.vue  script.js  style.css  template.html
src/components/widgets/RemoteRenderingView/: index.vue  script.js
src/plugins/: vuetify.js
src/protocols/: Cone.js
src/store/: index.js  wslink.js
