[tool.poetry]
name = "vtkpython"
version = "0.1.0"
description = ""
authors = ["dobatruong <batruongdo3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
vtk = "^9.2.6"
numpy = "^1.24.2"
wslink = "^1.10.1"
requests = "2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
