[tool.poetry]
name = "3dviewer-web-project"
version = "0.1.0"
description = ""
authors = ["dobatruong <batruongdo3@gmail.com>"]
readme = "README.md"
packages = [{include = "3dviewer_web_project"}]

[tool.poetry.dependencies]
python = "^3.9"
vtk = "^9.2.6"
wslink = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
